--- a/index.html
+++ b/index.html
@@ -13,11 +13,36 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>NET<span>FLIX</span></h1>
-        <p>Thank you for signing up to Netflix. Tell me more about yourself.</p>
+    <div>
+        <div class="container">
+            <h1>NET<span>FLIX</span></h1>
+            <p>Thank you for signing up to Netflix. Tell me more about yourself.</p>
+
+            <div class="survey-form">
+                <form action="#">
+                    <div>
+                        <label for="name">Name</label><br>
+                        <input type="text" id="name" placeholder="Enter your name">
+                    </div>
+                    <div>
+                        <label for="name">Name</label><br>
+                        <input type="text" id="name" placeholder="Enter your name">
+                    </div>
+                    <div>
+                        <label for="name">Name</label><br>
+                        <input type="text" id="name" placeholder="Enter your name">
+                    </div>
+                    <div>
+                        <label for="name">Name</label><br>
+                        <input type="text" id="name" placeholder="Enter your name">
+                    </div>
+
+
+                </form>
+            </div>
+        </div>
     </div>
-    div.
+
 </body>
 
 </html>
