--- a/index.html
+++ b/index.html
@@ -21,21 +21,69 @@
             <div class="survey-form">
                 <form action="#">
                     <div>
-                        <label for="name">Name</label><br>
-                        <input type="text" id="name" placeholder="Enter your name">
+                        <div>
+                            <label for="name">Name</label><br>
+                            <input type="text" id="name" placeholder="Enter your name">
+                        </div>
+                        <div>
+                            <label for="name">Age</label><br>
+                            <input type="text" id="age" placeholder="Age">
+                        </div>
+                        <div>
+                            <label for="name">Name</label><br>
+                            <input type="text" id="name" placeholder="Enter your email">
+                        </div>
+                        <div>
+                            <label for="content">Content Type</label><br>
+                            <select name="" id="content">
+                                <option value="series">Series</option>
+                                <option value="comedy">Comedy</option>
+                                <option value="drama">Drama</option>
+                                <option value="action">Action</option>
+                            </select>
+                        </div>
+                        <div>
+                            <label for="#">Movie Type</label>
+                            <div>
+                                <input type="checkbox" id="comedy">
+                                <label for="comedy">Comedy</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="action">
+                                <label for="comedy">Action</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="comedy">
+                                <label for="romance">Romance</label>
+                            </div>
+
+                        </div>
+                        <div>
+                            <label for="#">Gender</label>
+                            <div>
+                                <input type="radio" id="male" name="gender">
+                                <label for="male">Male</label>
+                            </div>
+                            <div>
+                                <input type="radio" id="famele" name="gender">
+                                <label for="famele">famele</label>
+                            </div>
+                            <div>
+                                <input type="radio" id="other" name="gender">
+                                <label for="other">Other</label>
+                            </div>
+
+                        </div>
+                        <div>
+                            <label for="textarea">Feedback</label><br>
+                            <textarea name="" id="textarea" cols="20" rows="3" placeholder="Any Comment"></textarea>
+                        </div>
+                        <div class="button">
+                            <input type="submit" value="Send">
+                        </div>
+
                     </div>
-                    <div>
-                        <label for="name">Name</label><br>
-                        <input type="text" id="name" placeholder="Enter your name">
-                    </div>
-                    <div>
-                        <label for="name">Name</label><br>
-                        <input type="text" id="name" placeholder="Enter your name">
-                    </div>
-                    <div>
-                        <label for="name">Name</label><br>
-                        <input type="text" id="name" placeholder="Enter your name">
-                    </div>
+
 
 
                 </form>
